# openpassport

./: .gitignore  .gitmodules  LICENSE  README.md  log.txt
.github/workflows/: action.yml  app.yml  artifacts.yml  mobile-deploy.yml  npm-publish.yml
app/: .babelrc  .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .watchmanconfig  .yarnrc.yml  App.tsx  Gemfile  README.md  app.config.js  app.json  babel.config.js  countries.md  declarations.d.ts  eas.json  env.sample  index.clip.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tamagui.config.ts  tsconfig.json
app/android/: .gitignore  build.gradle  dev-keystore  gradle.properties  gradlew  sentry.properties  settings.gradle
app/android/app/src/main/cpp/: CMakeLists.txt  proofofpassport.cpp  proofofpassportapp.cpp
app/android/app/src/main/cpp/include/: prover.h  witnesscalc_proof_of_passport.h  witnesscalc_register_sha256WithRSAEncryption_65537.h
app/ark-circom-passport/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
app/ark-circom-passport/artifacts/: verifier_artifact.json
app/ark-circom-passport/src/: passport.rs  save_pass.rs  zkey.rs
app/ark-circom-rsa/: Cargo.toml
app/ark-circom-rsa/rsa/: main.wasm
app/ark-circom-rsa/src/: rsa.rs
app/ark-zkey/: Cargo.toml  README.md
app/ark-zkey/src/: lib.rs
app/deployments/: Groth16Verifier.json  ProofOfPassport.json  addresses.json  arkzkeyUrl.json  deployed_addresses.json
app/fastlane/: Appfile  Fastfile  README.md
app/halo2-passport/: Cargo.toml  rust-toolchain
app/halo2-passport/src/: passport.rs
app/ios/: .xcode.env  App Thinning Size Report.txt  LottieView.swift  MRZScannerModule.m  MRZScannerModule.swift  OpenPassport-Bridging-Header.h  PassportOCRViewManager.m  PassportOCRViewManager.swift  PassportReader.m  PassportReader.swift  Podfile  ProofOfPassport-Bridging-Header.h  Prover.m  Prover.swift  QKMRZScannerViewRepresentable.swift  QRCodeScannerViewManager.m  QRCodeScannerViewManager.swift  QRScannerBridge.m  QRScannerBridge.swift  README.md  (+15 more)
app/ios/mopro/mopro-core/: Cargo.toml  build.rs
app/ios/mopro/mopro-core/examples/: circom.rs
app/ios/mopro/mopro-core/examples/circom/: .gitignore  README.md
app/ios/mopro/mopro-core/examples/circom/keccak256/: README.md  keccak.circom  keccak256_256_test.circom  package.json  permutations.circom  utils.circom
app/ios/mopro/mopro-core/examples/circom/multiplier2/: compile.sh  multiplier2.circom
app/ios/mopro/mopro-core/examples/circom/rsa/: README.md  bigint.circom  fp.circom  main.circom  package-lock.json  rsa.circom
app/ios/mopro/mopro-core/examples/circom/scripts/: compile.sh  generate_arkzkey.sh  trusted_setup.sh
app/ios/mopro/mopro-core/src/middleware/circom/: mod.rs
app/mopro-core/: Cargo.toml  README.md  build.rs
app/mopro-core/src/: lib.rs
app/mopro-core/src/middleware/: mod.rs
app/mopro-core/src/middleware/circom/: mod.rs  serialization.rs  utils.rs
app/mopro-ffi/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  uniffi.toml
app/mopro-ffi/src/: lib.rs  mopro.udl
app/mopro-ffi/tests/: test_generated_bindings.rs
app/mopro-ffi/tests/bindings/: test_mopro.kts  test_mopro.swift  test_mopro_keccak.kts  test_mopro_keccak.swift  test_mopro_keccak2.kts  test_mopro_keccak2.swift  test_mopro_rsa.kts  test_mopro_rsa.swift  test_mopro_rsa2.swift
app/witnesscalc/: .gitignore  CMakeLists.txt  COPYING  Makefile  README.md  build_gmp.sh
app/witnesscalc/build_witnesscalc_ios/witnesscalc_register_sha256_rsa_65537/: CMakeLists.txt
app/witnesscalc/cmake/: platform.cmake
app/witnesscalc/src/: CMakeLists.txt  calcwit.cpp  calcwit.hpp  circom.hpp  filemaploader.hpp  main.cpp  stub.cpp  test_platform.cpp  tests.cpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_authV2.cpp  witnesscalc_authV2.h  witnesscalc_disclose.cpp  witnesscalc_proof_of_passport.cpp  witnesscalc_prove_ecdsa_secp256r1_sha1.cpp  witnesscalc_prove_ecdsa_secp256r1_sha256.cpp  witnesscalc_prove_rsa_65537_sha1.cpp  witnesscalc_prove_rsa_65537_sha1.h  witnesscalc_prove_rsa_65537_sha256.cpp  witnesscalc_prove_rsapss_65537_sha256.cpp  witnesscalc_register_ecdsa_sha256.cpp  witnesscalc_register_rsa_65537_sha1.cpp  witnesscalc_register_rsa_65537_sha1.h  witnesscalc_register_rsa_65537_sha256.cpp  witnesscalc_register_rsapss_65537_sha256.cpp  witnesscalc_register_sha256WithRSAEncryption_65537.cpp  witnesscalc_vc_and_disclose.cpp  witnesscalc_vc_and_disclose.h
app/witnesscalc/testdata/: authV2_input.json
circuits/: .env  .gitignore  README.md  package.json  private.ec.key  stash_diff.patch  test.cer  test_inputs.json  test_upload.txt  tsconfig.json
common/: .gitignore  .prettierrc  README.md  bun.lockb  package.json  tsconfig.compile.json  tsconfig.json
contracts/: .env.example  .gitignore  README.md  dsc.json  hardhat.config.ts  package-lock.json  package.json
contracts-foundry/: Makefile  foundry.toml  remappings.txt
map-passport/: README.md  package-lock.json  package.json  tsconfig.json
mock_node_app/: index.js  package.json
noir/: Nargo.toml  Prover.toml  README.md  rsa-inputs.json
prover/: .gitignore  Dockerfile  README.md  app.py  dsc_prover.py  import_circuit.sh  launch_modal_server.sh  launch_prover.sh  requirements.txt
python-scripts/: README.md  script.py
registry/: .env.example  .gitignore  README.md  asn1tinydecoder.py  bun.lockb  certificateMap.json  extract-masterlists.sh  package-lock.json  package.json  tsconfig.json  visualize_countries.sh
sdk/: .env.example  .gitignore  .prettierrc  OpenPassportProverVerifier.ts  OpenPassportQRCode.ts  OpenPassportVerifierReport.ts  OpenPassportWeb2Verifier.ts  OpenPassportWeb3Verifier.ts  ProofOfPassportRegister.ts  ProofOfPassportVerifierReport.ts  ProofOfPassportWeb2Verifier.ts  ProofOfPassportWeb3Verifier.ts  QRCodeGenerator.ts  README.md  certificates.ts  index.ts  package-lock.json  package.json  sdk.ts  skiPem.ts  tsconfig.json  tsconfig.react.json  utils.ts  vkey.json  webpack.node.config.js  webpack.web.config.js
zkrsa/: .gitattributes  .gitignore  README.md  package.json
(+2521 files in other folders)
