[package]
name = "ark_circom_passport"
version = "0.1.0"
edition = "2021"

[lib]
name = "ark_circom_passport"
path = "src/passport.rs"
crate-type = ["cdylib"]

# [profile.dev]
# opt-level = 3

[patch.crates-io]
# NOTE: Forked wasmer to work around memory limits
# See https://github.com/wasmerio/wasmer/commit/09c7070
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }


[dependencies]
ark-circom = { git = "https://github.com/0xturboblitz/circom-compat.git" }
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "=0.4.0" }
ark-ec = { version = "=0.4.1" }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel", "asm"] }
ark-relations = { version = "=0.4.0", default-features = false }
ark-serialize = { version = "=0.4.1", default-features = false }
color-eyre = "=0.6.2"
ethers = "=2.0.7"
tokio = { version = "1", features = ["full"] }
jni = "0.18"
log = "0.4"
android_logger = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
byteorder = "=1.4.3"
num-traits = { version = "=0.2.15", default-features = false }
hex = "0.4"
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
] }
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }
once_cell = "1.8"
