[package]
name = "halo2_passport"
version = "0.1.0"
edition = "2021"

# Testing with the --release flag is like 10x faster

[lib]
name = "halo2_passport"
path = "src/passport.rs"
crate-type = ["cdylib"]

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

# halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4"}
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
halo2-rsa = { git = "https://github.com/zkemail/halo2-rsa.git", version = "0.1.0", branch = "main", features = [
  "sha256",
] }

# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
halo2-dynamic-sha256 = { git = "https://github.com/zkemail/halo2-dynamic-sha256.git", version = "0.1.0", branch = "main" }
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10.6"
rand = "0.8.5"
rsa = { version = "0.6.1", features = ["serde"] }
halo2-base = { version = "0.2.2", default-features = false, features = [
  "halo2-pse",
  "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
  "halo2-pse",
  "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
num-traits = "0.2.15"
ark-std = { version = "0.3.0", features = ["print-trace"] }
jni = "0.18" # Choose the version that best fits your needs
