[package]
name = "mopro-core"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git" }
serde = { version = "1.0", features = ["derive"] }
ark-serialize = { version = "=0.4.1", features = ["derive"] }
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
] }
instant = "0.1"
once_cell = "1.8"

# ZKP generation
ark-ec = { version = "=0.4.1", default-features = false, features = [
    "parallel",
] }
ark-crypto-primitives = { version = "=0.4.0" }
ark-std = { version = "=0.4.0", default-features = false, features = [
    "parallel",
] }
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = [
    "parallel",
] }
ark-relations = { version = "0.4", default-features = false }
ark-zkey = { path = "../ark-zkey" }
witness = { git = "https://github.com/philsippl/circom-witness-rs" }
ruint = { version = "1.10.0", features = ["rand", "serde", "ark-ff-04"] }
ark-ff = { version = "0.4.1", default-features = false, features = ["parallel", "asm"] }

# Error handling
thiserror = "=1.0.39"
color-eyre = "=0.6.2"
criterion = "=0.3.6"

[build-dependencies]
color-eyre = "0.6"
enumset = "1.0.8"
