[package]
name = "mopro-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mopro_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = []

# If we enable dylib here it should be enabled in mopro-core as well
dylib = ["mopro-core/dylib"]

[patch.crates-io]
# NOTE: Forked wasmer to work around memory limits
# See https://github.com/wasmerio/wasmer/commit/09c7070
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }

[dependencies]
mopro-core = { path = "../mopro-core" }
uniffi = { version = "0.25", features = ["cli"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
ark-serialize = { version = "=0.4.1", features = ["derive"] }
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
] }

# Error handling
thiserror = "=1.0.39"
color-eyre = "=0.6.2"
criterion = "=0.3.6"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.25", features = ["bindgen-tests"] }
ark-bn254 = { version = "=0.4.0" }
